# ProjectTox-Core

./: CMakeLists.txt  project.config
auto_tests/: Makefile.inc
other/: Makefile.inc
other/bootstrap_serverdaemon/: Makefile.inc
other/cmake/: DHT_bootstrap.cmake
testing/: Makefile.inc
testing/cmake/: DHT_test.cmake  Messenger_test.cmake  nTox.cmake
toxcore/: CMakeLists.txt
